; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_test_and_set_bit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_test_and_set_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bxe_test_and_set_bit(i32 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64* %1, i64** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = shl i32 1, %6
  store i32 %7, i32* %3, align 4
  br label %8

8:                                                ; preds = %11, %2
  %9 = load i64*, i64** %4, align 8
  %10 = load volatile i64, i64* %9, align 8
  store i64 %10, i64* %5, align 8
  br label %11

11:                                               ; preds = %8
  %12 = load i64*, i64** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = or i64 %14, %16
  %18 = call i64 @atomic_cmpset_acq_long(i64* %12, i64 %13, i64 %17)
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %8, label %20

20:                                               ; preds = %11
  %21 = load i64, i64* %5, align 8
  %22 = load i32, i32* %3, align 4
  %23 = sext i32 %22 to i64
  %24 = and i64 %21, %23
  %25 = trunc i64 %24 to i32
  ret i32 %25
}

declare dso_local i64 @atomic_cmpset_acq_long(i64*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
